# yeyo

./: .gitignore  README.md  improved-middleware.js  package.json  pnpm-lock.yaml  tauri-http-example.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: file-list.tsx  global-pip.tsx  icons.tsx  menu.tsx  multi-directory-list.tsx  settings-dialog.tsx
src/components/ui/: alert-dialog.tsx  sheet.tsx
src/dashboard/: page-new.tsx  page.tsx
src/dashboard/components/: add-to-playlist-dialog.tsx  animagine-xl.tsx  background-remover.tsx  create-playlist-dialog.tsx  dashboard-cards.tsx  facebook-downloader.tsx  global-pip.tsx  instagram-downloader.tsx  main-nav.tsx  media-player.tsx  multi-media-layout.tsx  multi-music-player.tsx  multi-video-player.tsx  music-player-backup.tsx  music-player.tsx  picture-in-picture.tsx  playlist-manager.tsx  spotify-downloader.tsx  team-switcher.tsx  threads-downloader.tsx  tiktok-downloader.tsx  user-nav.tsx  video-player.tsx  youtube-downloader-new.tsx  youtube-downloader.tsx  youtube-mp3-downloader.tsx  youtube-mp3-v2-downloader.tsx  youtube-summarize.tsx  yt-mp4-downloader.tsx  ytdlp-download-manager.tsx
src/dashboard/components/anime/: anime-completed.tsx  anime-detail.tsx  anime-home.tsx  anime-layout.tsx  anime-ongoing.tsx  anime-player.tsx  anime-search.tsx
src/dashboard/components/download/: download-manager.tsx
src/dashboard/components/ffmpeg/: ffmpeg-layout.tsx  ffmpeg-overview.tsx  ffmpeg-router.tsx  media-looper.tsx  noise-reducer.tsx  (+3 more)
src/hooks/: use-directory-browser.ts  use-multi-directory-browser.ts
src/stores/: media-directory-provider.tsx  media-directory-store.tsx  multi-directory-provider.tsx  pip-store.tsx  playlist-store.tsx
src/styles/: globals.css
(+7 files in other folders)
